# Plateformer

./: .gitignore  .txt  CMakeLists.txt  README.md  main.cpp
src/: Player.cpp  Player.hpp
